# FAST_API

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  stage_03_status_code.py  stage_04_profile_schema.py  stage_get_by_id_02.py  stage_schema_00.py  stage_starter_01.py
src/app/: database.py  main.py  models.py  social.py
